# FastaReader

./: .gitignore  CMakeLists.txt  Readme.md
Docker/: Dockerfile  build.sh  env.sh  run_tests.sh
Java/: CMakeLists.txt  FastaReader.i  Readme.md  build.gradle  example.java  gradle-app.setting  settings.gradle  swig_java.md
Java/gradle/wrapper/: gradle-wrapper.properties
Java/src/main/java/: Library.java
Java/src/main/java/com/github/dlaperriere/: FastaHead.java  FastaStats.java  FastaTools.java  FastaToolsOptions.java  TestLogging.java
Java/src/test/java/: FastaReaderTest.java  LibraryTest.java
Java/src/test/resources/: t.fa
Jenkins/: build_java.cmd  build_java.sh  build_perl.cmd  build_perl.sh  build_python.cmd  build_python.sh  build_test.cmd  build_test.sh
Perl/: CMakeLists.txt  FastaReader.i  Readme.md  fasta_stats.pl  perl_dir.pl  swig_perl.md
Python/: CMakeLists.txt  FastaReader.i  Readme.md  fasta_stats.py  python_dir.py  swig_python.md
doc/Config/: Doxyfile.in
include/: FastaReader.hpp  Utils.hpp  count_fasta.hpp  getopt_long.hpp  head_fasta.hpp  stats_fasta.hpp  wgetopt.README.md  wgetopt.h
src/: CMakeLists.txt  FastaReader.cpp  Utils.cpp  count_fasta.cpp  fastatools.cpp  head_fasta.cpp  stats_fasta.cpp
test/: CMakeLists.txt  README.md  Test_cppunit.cpp  test_fastareader.cpp  test_utils.cpp
test/cppunit/cmake_modules/: DownloadCPPUNIT.cmake.in  FindCPPUNIT.cmake
test/cppunit/cppunit_example/: Money.cpp  Money.h  Readme.md
test/data/: masked.fa  threeseq.fa
