
FIND_PACKAGE(SWIG REQUIRED)
IF(SWIG_FOUND)

MESSAGE(STATUS "   === Generating java bindings ===")

INCLUDE(${SWIG_USE_FILE})

find_package(Java)
find_package(JNI)

## defaults can be changed with 
##    cmake -DJAVA_EXECUTABLE=/path/java
##    cmake -DSWIG_EXECUTABLE=/path/swig
IF(Java_FOUND)

   INCLUDE_DIRECTORIES(${Java_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

   SET(CMAKE_SWIG_FLAGS "")
   SET (	MODULE_NAME		FastaReaderJAVA)
   SET (	INTERFACE_FILE		FastaReader.i)

   set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/)

   SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES CPLUSPLUS ON)
   #SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_MODULE_NAME FastaReaderJAVA)
   #SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_FLAGS "-includeall")

   set(CMAKE_SWIG_FLAGS -package com.github.dlaperriere)

   SWIG_ADD_MODULE(${MODULE_NAME} java ${INTERFACE_FILE} )
   SWIG_LINK_LIBRARIES(${MODULE_NAME} ${Java_LIBRARIES} ${JNI_LIBRARIES} FastaReader)

ELSE(Java_FOUND)
    MESSAGE(SEND_ERROR "   Could not find java...")
ENDIF(Java_FOUND)

ELSE(SWIG_FOUND)
    MESSAGE(SEND_ERROR "   Could not find SWIG...")
ENDIF(SWIG_FOUND)


