
FIND_PACKAGE(SWIG REQUIRED)
IF(SWIG_FOUND)

if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.13")
  # policy introduced in CMake 3.13
  cmake_policy(SET CMP0078 NEW)
endif()
if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14")
  # policy introduced in CMake 3.14
  cmake_policy(SET CMP0086 NEW)
endif()

MESSAGE(STATUS "   === Generating java bindings ===")

INCLUDE(${SWIG_USE_FILE})

find_package(Java)
find_package(JNI)

## defaults can be changed with 
##    cmake -DJAVA_EXECUTABLE=/path/java
##    cmake -DSWIG_EXECUTABLE=/path/swig
IF(Java_FOUND)

   INCLUDE_DIRECTORIES(${Java_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

   SET(CMAKE_SWIG_FLAGS "")
   SET (	MODULE_NAME		FastaReaderJAVA)
   SET (	INTERFACE_FILE		FastaReader.i)

   set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/)

   SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES CPLUSPLUS ON)
   #SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_MODULE_NAME FastaReaderJAVA)
   #SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_FLAGS "-includeall")

   set(CMAKE_SWIG_FLAGS -package com.github.dlaperriere)
 
   if(${CMAKE_VERSION} VERSION_LESS "3.8.0")
     SWIG_ADD_MODULE(${MODULE_NAME} java ${INTERFACE_FILE} )
   else()
     set_property(SOURCE ${INTERFACE_FILE} PROPERTY SWIG_MODULE_NAME ${MODULE_NAME})
     SWIG_ADD_LIBRARY(${MODULE_NAME} LANGUAGE java TYPE MODULE SOURCES ${INTERFACE_FILE} )
   endif()

     SWIG_LINK_LIBRARIES(${MODULE_NAME} ${Java_LIBRARIES} ${JNI_LIBRARIES} FastaReader)

ELSE(Java_FOUND)
    MESSAGE(SEND_ERROR "   Could not find java...")
ENDIF(Java_FOUND)

ELSE(SWIG_FOUND)
    MESSAGE(SEND_ERROR "   Could not find SWIG...")
ENDIF(SWIG_FOUND)


