
FIND_PACKAGE(SWIG REQUIRED)
IF(SWIG_FOUND)

MESSAGE(STATUS "   === Generating perl bindings ===")

INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PerlLibs)

## defaults can be changed with 
##    cmake -DPERL_EXECUTABLE=/path/perl
##    cmake -DSWIG_EXECUTABLE=/path/swig
IF(PERLLIBS_FOUND)

   INCLUDE_DIRECTORIES(${PERL_INCLUDE_PATH})
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

   SET(CMAKE_SWIG_FLAGS "")
   SET (	MODULE_NAME		PerlFastaReader)
   SET (	INTERFACE_FILE		FastaReader.i)

   set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/)

   SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES CPLUSPLUS ON)
   SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_MODULE_NAME FastaReader)
   #SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_FLAGS "-includeall")


   SWIG_ADD_MODULE(${MODULE_NAME} perl  ${INTERFACE_FILE} )
   SWIG_LINK_LIBRARIES(${MODULE_NAME} ${PERL_LIBRARY} FastaReader)

ELSE(PERLLIBS_FOUND)
    MESSAGE(SEND_ERROR "   Could not find perl libs...")
ENDIF(PERLLIBS_FOUND)

ELSE(SWIG_FOUND)
    MESSAGE(SEND_ERROR "   Could not find SWIG...")
ENDIF(SWIG_FOUND)


