
FIND_PACKAGE(SWIG REQUIRED)
IF(SWIG_FOUND)

if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.13")
  # policy introduced in CMake 3.13
  cmake_policy(SET CMP0078 NEW)
endif()
if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14")
  # policy introduced in CMake 3.14
  cmake_policy(SET CMP0086 NEW)
endif()

MESSAGE(STATUS "   === Generating python bindings ===")

INCLUDE(${SWIG_USE_FILE})
MESSAGE(STATUS "     Using swig: ${SWIG_EXECUTABLE}")

FIND_PACKAGE(PythonLibs)

## defaults can be changed with 
##    cmake -DPYTHON_EXECUTABLE=/path/python
##    cmake -DSWIG_EXECUTABLE=/path/swig
IF(PYTHONLIBS_FOUND)

   MESSAGE(STATUS "   Using python: ${PYTHON_EXECUTABLE}")
   INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

   SET(CMAKE_SWIG_FLAGS "")
   SET (	MODULE_NAME		PythonFastaReader)
   SET (	INTERFACE_FILE		FastaReader.i)

   set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/)

   SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES CPLUSPLUS ON)
   SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_MODULE_NAME FastaReader)
   #SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILE} PROPERTIES SWIG_FLAGS "-includeall")

   if(${CMAKE_VERSION} VERSION_LESS "3.8.0")
     SWIG_ADD_MODULE(${MODULE_NAME} python  ${INTERFACE_FILE} )
   else()
     SWIG_ADD_LIBRARY(${MODULE_NAME} LANGUAGE python SOURCES ${INTERFACE_FILE} )
   endif()

   SWIG_LINK_LIBRARIES(${MODULE_NAME} ${PYTHON_LIBRARIES} FastaReader)

ELSE(PYTHONLIBS_FOUND)
    MESSAGE(SEND_ERROR "   Could not find python libs...")
ENDIF(PYTHONLIBS_FOUND)

ELSE(SWIG_FOUND)
    MESSAGE(SEND_ERROR "   Could not find SWIG...")
ENDIF(SWIG_FOUND)


